<resources>
    <string name="app_name">ShadowDarkTimer</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pause_label">&#x25A0;</string>
    <string name="play_label">▶</string>
    <string name="backward_label">⏮</string>
    <string name="forward_label">⏭</string>
    <string name="time_format">hh:mm:ss</string>
    <string name="time_change_format">mm:ss</string>
    <string name="plus">+</string>
</resources>