<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_app_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/grey_section_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/globalPause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1.5"
            android:padding="0dp"
            android:backgroundTint="@color/red_buttons_bg"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/pause_label"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="normal"
            android:onClick="onGlobalPauseClicked"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />

        <Button
            android:id="@+id/globalBackward"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1.5"
            android:padding="0dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/backward_label"
            android:textColor="@color/red_time_op"
            android:textSize="28sp"
            android:textStyle="bold"
            android:onClick="onGlobalBackwardClicked"/>

        <com.tm.shadowdarktimer.decorated_widgets.AutoformattingTimeChange
            android:id="@+id/globalTimeChangeInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:gravity="center"
            android:inputType="time"
            android:maxLines="1"
            android:padding="3dp"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="10:00"/>

        <Button
            android:id="@+id/globalForward"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="15dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1.5"
            android:padding="0dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/forward_label"
            android:textColor="@color/red_time_op"
            android:textSize="28sp"
            android:textStyle="bold"
            android:onClick="onGlobalForwardClicked"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@color/grey_section_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/torchesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:stackFromEnd="true"
            app:reverseLayout="true"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>